<resources>
    <string name="app_name">Products</string>
    <string name="list_products_screen_title">Produtos</string>
    <string name="edit_products_screen_title">Adicionar Produto</string>
    <string name="add_products_screen_name_hint">Nome do Produto</string>
    <string name="add_products_screen_desc_hint">Descrição do Produto</string>
    <string name="add_products_screen_price_hint">99.99</string>
    <string name="add_products_screen_check_is_active">Produto Ativo</string>
</resources>