<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_product_screen_bg"
    tools:context=".CreateProduct">

    <TextView
        android:id="@+id/list_products_screen_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/edit_products_screen_title"
        android:textSize="28sp"
        android:textColor="@color/screen_titles"
        app:layout_constraintBottom_toTopOf="@+id/editProductName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/add_products_screen_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@color/add_product_edit_text_hint"
        android:textColor="@color/add_product_edit_text"
        android:backgroundTint="@color/add_product_edit_text" />

    <EditText
        android:id="@+id/editProductDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/add_products_screen_desc_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProductName"
        android:textColorHint="@color/add_product_edit_text_hint"
        android:textColor="@color/add_product_edit_text"
        android:backgroundTint="@color/add_product_edit_text"/>

    <EditText
        android:id="@+id/editProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/add_product_edit_text"
        android:ems="10"
        android:gravity="center"
        android:textSize="22sp"
        android:hint="@string/add_products_screen_price_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/add_product_edit_text"
        android:textColorHint="@color/add_product_edit_text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProductDesc" />

    <Button
        android:id="@+id/btn_home"
        android:drawableTop="@drawable/menu_icon"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:paddingTop="5dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:backgroundTint="#00000000"
        android:outlineProvider="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add_product"
        android:drawableTop="@drawable/add_icon"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:paddingTop="5dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="#00000000"
        android:outlineProvider="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$"
        android:textSize="32sp"
        android:textColor="@color/add_product_edit_text"
        app:layout_constraintBottom_toBottomOf="@+id/editProductPrice"
        app:layout_constraintEnd_toStartOf="@+id/editProductPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editProductPrice" />

    <Button
        android:id="@+id/create_add_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:onClick="addProduct"
        android:text="Adicionar Produto"
        app:backgroundTint="@color/add_product_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxIsProdActive" />

    <CheckBox
        android:id="@+id/checkBoxIsProdActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/add_products_screen_check_is_active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProductPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>